# api-cadastro

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: crud.py  database.py  main.py  models.py  schemas.py
app/routers/: crud_routers.py
